Update build settings